Styling for the wares.

--- a/app/assets/stylesheets/helpers.css.sass
+++ b/app/assets/stylesheets/helpers.css.sass
@@ -5,7 +5,7 @@ $white: #ffffff
 $black: #000000
 $red: #DF5858
 $brown: #c79c5b
-$blue: #547DD6
+$blue: #3C4949
 $light_green: #5d6965
 $dark_green: #4d5a54
 $yellow: #dbdaa0
