--- a/app/views/admin/wares/index.html.haml
+++ b/app/views/admin/wares/index.html.haml
@@ -1,8 +1,9 @@
 %section
   .pull-right
     .btn-group
-      = link_to('Add Ware', new_admin_ware_path, :class => 'btn btn-info btn-large')
-      
+      = link_to('Add Ware', new_admin_ware_path, :class => 'btn btn-info')
+      = link_to('Ware Index', wares_path, :class => 'btn')
+
   .page-header
     %h1 Wares
   
@@ -15,9 +16,11 @@
     %tbody
       - @wares.each do |ware|
         %tr
-          %td= image_tag(ware.photo.url(:thumb))
+          %td= link_to(image_tag(ware.photo.url(:thumb_padded)), ware) 
           %td= link_to(ware.name, edit_admin_ware_path(ware))
           %td= ware.kind
-          %td= link_to('delete', admin_ware_path(ware), :method => :delete, :confirm => 'Yeah?')
+          %td
+            = link_to('Edit', edit_admin_ware_path(ware), class: 'btn')
+            = link_to('Delete', admin_ware_path(ware), :method => :delete, :confirm => 'Yeah?', class: 'btn btn-danger')
           
     
