--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,7 +1,9 @@
 .box
-  %h3= current_user.name
+  %h1.page-header= current_user.name
 
-  = image_tag(resource.photo_url, class: 'pull-right') if resource.photo?
+  %h3 Edit Profile
+
+  = image_tag(resource.photo.tiny, class: 'pull-right') if resource.photo?
 
   = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, class: 'form-horizontal' }) do |f|
     = f.error_notification
