--- a/app/views/feeds/_new_user.html.haml
+++ b/app/views/feeds/_new_user.html.haml
@@ -1,6 +1,6 @@
 .event
   %p.photo
-    = link_to(image_tag('http://placehold.it/50x50', class: 'drink-photo'), event.subject)
+    = link_to(image_tag(event.subject.photo.tiny, class: 'drink-photo'), event.subject)
 
   %p.description
     %strong== #{link_to(event.subject.display_name, event.subject)} Joined
