--- a/app/views/user/drinks/new.html.haml
+++ b/app/views/user/drinks/new.html.haml
@@ -1,3 +1,3 @@
 %section.box
-  %h1 Create your drink
+  %h1.page-header Create your drink
   = render partial: 'form', locals: { submit_tag: 'Craft Drink'} 
