--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -212,7 +212,7 @@ ul#sort-grid.wares
     line-height: 18px
     box-shadow: 2px 2px 5px 0 rgba(0,0,0,.25)
     text-shadow: 0 1px 4px rgba(0,0,0,.25)
-    width: 250px
+    width: 75%
     font-family: 'Medula One', cursive
     letter-spacing: 0.08em
     &:before
