--- a/app/views/drinks/show.html.haml
+++ b/app/views/drinks/show.html.haml
@@ -24,6 +24,9 @@
         &nbsp; &nbsp; &nbsp; &nbsp;
         = link_to('<i class="icon-thumbs-down"></i>'.html_safe, drink_ratings_path(@drink), rel: 'rate', 'data-feeling' => -1)
 
+  .span1{style:'max-width:5px'}
+    &nbsp;
+
   .span4
     %h4 Ingredients
     %ul.components
