--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -304,6 +304,9 @@ h1.page-header
   p
     margin: 0 0 20px 20px
 
+.follow-unfollow
+  margin: 2px 6px 0 0
+
 // FOOTER
 footer
   margin-top: 40px
