--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -2,11 +2,6 @@
   %h3 Our Mixologists
 
   .row
-    - @users.each do |user|
-      .userbox
-        = link_to(image_tag(user.photo.medium, class: 'drink-photo'), user)
-        .name= link_to(user.display_name, user)
-        .meta-data
-          %i.icon-glass== &nbsp; #{user.drinks.count} Drinks
+    = render(partial: 'users/user', collection: @users)
 
 = will_paginate(@users)
