--- a/app/views/drinks/_drinks.html.haml
+++ b/app/views/drinks/_drinks.html.haml
@@ -1,4 +1,8 @@
 .box
+  .pull-right
+    .follow-unfollow
+      = link_to('Add Drink', new_user_drink_path, class: 'btn btn-success')
+
   %h3= title
   .row
     - drink_collection.each do |drink|
