Only show it sometimes.

--- a/app/views/user/drinks/index.html.haml
+++ b/app/views/user/drinks/index.html.haml
@@ -1,1 +1,1 @@
-= render('drinks/drinks', title: 'My Drinks', drink_collection: @drinks)
+= render('drinks/drinks', title: 'My Drinks', drink_collection: @drinks, add_drink: true)
