--- a/app/views/drinks/_drinks.html.haml
+++ b/app/views/drinks/_drinks.html.haml
@@ -1,7 +1,10 @@
+- add_drink ||= false
+
 .box
-  .pull-right
-    .follow-unfollow
-      = link_to('Add Drink', new_user_drink_path, class: 'btn btn-success')
+  - if add_drink
+    .pull-right
+      .follow-unfollow
+        = link_to('Add Drink', new_user_drink_path, class: 'btn btn-success')
 
   %h3= title
   .row
