--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -47,7 +47,10 @@
             = render('feeds/feed', events: TimelineEvent.limit(6))
             = yield(:sidebar)
     %footer.fancy.center.white-bar
-      %p www.MyBestDrink.com
+      %p 
+        www.MyBestDrink.com
+        %br
+        = link_to('Rails Rumble 2012', 'http://www.railsrumble.com', target: 'blank')
     = javascript_include_tag "application"
 
     :javascript
