--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -1,5 +1,5 @@
 = render('drinks/drinks', title: 'Most Popular Drinks', drink_collection: @popular_drinks)
-= render('drinks/drinks', title: 'Up And Coming', drink_collection: @trending_drinks)
+/ = render('drinks/drinks', title: 'Up And Coming', drink_collection: @trending_drinks)
 = render('drinks/drinks', title: 'Recently Mixed', drink_collection: @recent_drinks)
 
 - unless @classic_drinks.empty?
