--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -65,4 +65,11 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
 
+    :javascript
+      var rumbleBannerBackgroundColor, rumbleBannerTextColor, rumbleBannerLinkColor, rumbleBannerPlacement;
+      rumbleBannerBackgroundColor = "#161616";
+      rumbleBannerTextColor = "#b0b0b0";
+      rumbleBannerLinkColor = "#ffffff";
+      rumbleBannerPlacement = "bottom";
 
+    %script(src="http://s0.railsrumble.com/banner.js" type="text/javascript")
