--- a/app/views/site/about.html.haml
+++ b/app/views/site/about.html.haml
@@ -2,6 +2,6 @@
   %h1.page-header About My Best Drink
   %p It's not just about *My* Best Drink, it's about yours, too! We have gathered resources from bar tenders, and scoured the information super highway to bring you as much information about Mixology, and putting proper use of fine alcohols into your hands.
   %p We encourage adults to drink responsibly, and to do so, we feel you should be educated. Learn which alcohol mixes into the finest of drinks, and which you should absolutely stay away from. You will soon be a mixologist, and pass along the knowledge you have learned.
-  %p Whether it be a house party, or at the local bar and club, you should know how your favorite drinks are concocted. This gives you the upper hand. Does your favorite have too much alcohol, not enough, just the right? Maybe some people make them differently. Knowing the difference ensures you drink the correct drink, and not what some barely old-enough bartender decides is *his* way.
+  %p Whether it be a house party, or at the local bar and club, you should know how your favorite drinks are concocted. This gives you the upper hand. Does your favorite have too much alcohol, not enough, just the right amount? Maybe some people make them differently. Knowing the difference ensures you drink the correct drink, and not what some barely old-enough bartender decides is *his* way.
   %p Sign up for an account, and let us know what you have in your house. We can offer up suggestions of some drinks to try out!
   %h2 Enjoy, and say it loud "My Best Drink".
