--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -318,3 +318,14 @@ footer
 
   p
     margin-top: 42px
+    
+.rumblebanner
+  background-color: rgba(0, 0, 0, 0.8)
+  color: #b0b0b0
+  position: fixed
+  bottom: 0
+  width: 100%
+  padding: 10px
+  text-align: center
+  a
+    color: #ffffff
